--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,18 +2,18 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: Aldrich Valentino Halim
     - name: Date of Birth
-      value: 14th March 1879
+      value: February 13, 1997
     - name: Languages
-      value: English, German
+      value: English (Fluent), Indonesian (Native)
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: MSc in Computer Engineering
+      institution: New York University, United States
+      year: 2025
       description:
         - Description 1.
         - Description 2.
@@ -21,9 +21,9 @@
           contents:
             - Sub-description 1.
             - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+    - title: BSc in Computer Science
+      institution: Bandung Institute of Technology, Indonesia
+      year: 2019
       description:
         - Description 1.
         - Description 2.
